<resources>
    <string name="app_name">OptigAI</string>
    <string name="back_button_description">Go back</string>
    <string name="gallery_image_description">Image in gallery</string>
    <string name="item_image">Image description</string>
    <string name="content_description_preview_image">Image preview</string>
    <string name="content_description_previous_image">Previous image button</string>
    <string name="content_description_next_image">Next image button</string>
    <string name="content_description_zoom_button">Toggle zoom on image</string>
    <string name="error_result_fragment_analysis_result">Something went wrong</string>
    <string name="analise_text_fragment_analysis_selector">ANALYZE TEXT</string>
    <string name="analise_braille_fragment_analysis_selector">ANALYZE BRAILLE</string>
    <string name="analise_item_fragment_analysis_selector">ANALYZE ITEM</string>
    <string name="analysis_header_shared">ANALYSIS</string>
    <string name="gallery_header_shared">GALLERY</string>
    <string name="preview_header_shared">PREVIEW</string>
    <string name="open_settings_description">Settings</string>
    <string name="take_photo_description">Take Photo</string>
    <string name="open_gallery_description">Gallery</string>
    <string name="gallery_layout_description">Change Gallery Layout</string>
    <string name="photo_analysis_description">Photo Analysis</string>
    <string name="background_photo_description">Background Photo for Analysis</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="chosen_gallery_view">Choose your preferred gallery view:</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="number2">2</string>
    <string name="settings_header">SETTINGS</string>
    <string name="is_photo_saving_option_title">Would you like to save the photos you take?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_result_fragment_analysis_result">Nothing was detected. Try with another photo.</string>


    <string name="toggle_button_color_red_on">Red on</string>
    <string name="toggle_button_color_red_off">Red off</string>
    <string name="toggle_button_color_white_on">White on</string>
    <string name="toggle_button_color_white_off">White off</string>
    <string name="toggle_button_color_black_on">Black on</string>
    <string name="toggle_button_color_black_off">Black off</string>
    <string name="toggle_button_color_purple_on">Purple on</string>
    <string name="toggle_button_color_purple_off">Purple off</string>
    <string name="toggle_button_color_yellow_on">Yellow on</string>
    <string name="toggle_button_color_yellow_off">Yellow off</string>
    <string name="toggle_button_color_blue_on">Blue on</string>
    <string name="toggle_button_color_blue_off">Blue off</string>
    <string name="toggle_button_color_gray_on">Gray on</string>
    <string name="toggle_button_color_gray_off">Gray off</string>
    <string name="toggle_button_color_green_on">Green on</string>
    <string name="toggle_button_color_green_off">Green off</string>
    <string name="toggle_button_color_orange_on">Orange on</string>
    <string name="toggle_button_color_orange_off">Orange off</string>
</resources>