<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".ui.PhotoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />
    <include layout="@layout/navbar" />
    <FrameLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_preview_image"
            tools:src="@drawable/photo1" />

    </FrameLayout>

    <View
        android:id="@+id/bottomBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:stateListAnimator="@animator/scale_animator"/>

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/next_prev_button"
        android:src="@drawable/ic_back_button"
        android:contentDescription="@string/content_description_previous_image"
        app:layout_constraintBottom_toBottomOf="@+id/bottomBar"
        app:layout_constraintStart_toStartOf="@+id/bottomBar"
        app:layout_constraintTop_toTopOf="@+id/bottomBar"
        android:stateListAnimator="@animator/scale_animator"/>

    <ImageView
        android:id="@+id/middleButton"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:src="@drawable/look_button"
        android:contentDescription="@string/content_description_zoom_button"
        app:layout_constraintBottom_toBottomOf="@+id/bottomBar"
        app:layout_constraintStart_toStartOf="@+id/bottomBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomBar"
        app:layout_constraintTop_toTopOf="@+id/bottomBar"
        android:stateListAnimator="@animator/scale_animator"/>

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/next_prev_button"
        android:src="@drawable/ic_next_button"
        android:contentDescription="@string/content_description_next_image"
        app:layout_constraintBottom_toBottomOf="@+id/bottomBar"
        app:layout_constraintEnd_toEndOf="@+id/bottomBar"
        app:layout_constraintTop_toTopOf="@+id/bottomBar" />

</androidx.constraintlayout.widget.ConstraintLayout>
