<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".ui.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreviewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cameraControlLayout"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/lightblue"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/openGalleryButton"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:background="@drawable/gallery_button"
            android:contentDescription="@string/open_gallery_description"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:stateListAnimator="@animator/scale_animator"/>

        <ImageButton
            android:id="@+id/takePhotoButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/take_photo_button"
            android:background="@android:color/transparent"
            android:contentDescription="@string/take_photo_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:stateListAnimator="@animator/scale_animator"/>

        <ImageView
            android:id="@+id/openSettingsButton"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:background="@drawable/settings_button"
            android:contentDescription="@string/open_settings_description"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:stateListAnimator="@animator/scale_animator"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>